# versatile

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  python-package.yml
docs/: api.md  concepts.md  examples.md  index.md  profiles.md
pling-repository/: pyproject.toml
pling-repository/src/pling/repository/: __init__.py  decorators.py
pling-repository/tests/: test_repository.py
src/versatile/: __init__.py  builders.py  bundle.py  bundle_manifest.py  component_builder.py  component_set.py  domain.py  errors.py  provider_set.py  registry.py
tests/: example.py  registry.py  test_bundle.py  test_registry.py
versatile/: README.md  pyproject.toml
versatile/.github/workflows/: deploy-docs.yml
versatile/docs/: _config.yml  advanced.md  api.md  bundles.md  concepts.md  examples.md  installation.md  profiles.md  registration.md
versatile/src/versatile/: __init__.py  builders.py  bundle.py  bundle_manifest.py  component_builder.py  component_set.py  domain.py  provider_set.py  registry.py
versatile/tests/: example.py  test_bundle.py  test_registry.py
