[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/poetix/versatile"
Repository = "https://github.com/poetix/versatile"

[project]
name = "pling-repository"
version = "0.1.0"
description = "SQL Repository support for Pling"
authors = [{ name = "Dominic Fox", email = "dominic.fox@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = ["versatile @ file://../versatile"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "mypy>=1.6",
    "ruff>=0.0.290",
    "black>=23.3.0",
    "isort>=5.12.0",
    "typing-extensions>=4.5.0"  # only if you want to support <3.10
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pling.repository"]
namespaces = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
strict = true
python_version = "3.8"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
fix = true

[tool.black]
line-length = 88
target-version = ["py38"]

